Added arxiv refs.

--- a/bib.bib
+++ b/bib.bib
@@ -139,6 +139,7 @@ ISSN={0018-9448},
 }
 
 
+
 @article {Arnold_mobius_revealed,
     AUTHOR = {A. N. Douglas and J. Rogness},
      TITLE = {M\"obius transformations revealed},
@@ -547,7 +548,7 @@ year=1978
 author={R. N. Bhattacharya and V. Patrangenaru},
 year=2003, 
 title={Large sample theory of intrinsic
-and extrinsic sample means on manifolds I},
+and extrinsic sample means on manifolds {I}},
 journal={Annals of Statistics},
 vol=31,
 number=1, 
@@ -558,7 +559,7 @@ pages={1-29}
 author={R. N. Bhattacharya and V. Patrangenaru},
 year=2005, 
 title={Large sample theory of intrinsic
-and extrinsic sample means on manifolds II},
+and extrinsic sample means on manifolds {II}},
 journal={Annals of Statistics},
 vol=33,
 number=3, 
@@ -575,6 +576,13 @@ pages={1225-1259}
   month = {April},
   liu_class = {B1},
   mi_research_area = {cmiv,learning,filters}
+}
+
+@unpublished{Hotz_circle_means_2011,
+title={Intrinsic Means on the Circle: Uniqueness, Locus and Asymptotics},
+author={T. Hotz and S. Huckemann},
+note={http://arxiv.org/abs/1108.2141},
+year={2011}
 }
 
 
@@ -628,6 +636,17 @@ month={July},
 year=2007
 }
 
+
+@ARTICLE{Morelli2000_jointphasetimingMSK,
+    author = {M. Morelli and G. M. Vitetta},
+    title = {Joint phase and timing recovery for MSK-type signals},
+    journal = ieeetc,
+    year = 2000,
+    volume = 48,
+number=12,
+    pages = {1997-1999}
+}
+
 @ARTICLE{Oerder_synch_square_circstat_2008, 
 author={M. Oerder and H. Meyr}, 
 journal=ieeetcom, 
@@ -636,7 +655,7 @@ year=1988,
 month={May}, 
 volume=36, 
 number=5, 
-pages={605 -612}, 
+pages={605-612}, 
 keywords={digital algorithm;digital data transmission;digital filter;free-running sampling oscillators;planar filtering method;synchronisation hangups;timing jitter;timing recovery circuits;digital communication systems;digital filters;filtering and prediction theory;synchronisation;timing circuits;}, 
 doi={10.1109/26.1476}, 
 ISSN={0090-6778},}
@@ -690,6 +709,52 @@ archivePrefix = "arXiv",
   volume = {40},
   pages = {3-27},
   number = {4}
+}
+
+
+@ARTICLE{Oerder1987_on_Gardner_timing, 
+author={ M. Oerder}, 
+journal=ieeetc, 
+title={Derivation of {Gardner's} Timing-Error Detector from the Maximum Likelihood Principle}, 
+year=1987, 
+month={Jun}, 
+volume=35, 
+number=6, 
+pages={684-685}, 
+abstract={ In a recent paper [1], Gardner described a new timing-error detector for sampled receivers. The detector derives timing information without decision direction from a BPSK or QPSK signal sampled at rate2/T(symbol intervalT). We will show how this detector can be derived from the maximum likelihood principle, and thus give insight into the nature of the algorithm.}, 
+keywords={ Maximum-likelihood detection; Synchronization;}, 
+doi={10.1109/TCOM.1987.1096826}, 
+ISSN={0090-6778},}
+
+@ARTICLE{Gardner_sampled_timing1986, 
+author={ F. Gardner}, 
+journal=ieeetc, 
+title={A {BPSK/QPSK} Timing-Error Detector for Sampled Receivers}, 
+year=1986, 
+month={May}, 
+volume=34, 
+number=5, 
+pages={423-429}, 
+keywords={ Data communications; Phase-shift keying;}, 
+doi={10.1109/TCOM.1986.1096561}, 
+ISSN={0090-6778}}
+
+@ARTICLE{Laurent1986_PAMCPMapprox,
+    author = {P. A. Laurent},
+    title = {Exact and Approximate Construction of Digital Phase Modulations by Superposition of Amplitude Modulated Pulses {(AMP)}},
+    journal = ieeetc,
+    year = 1986,
+    volume = 34,
+number=2,
+    pages = {150-160}
+}
+
+@book{Even_graph_algorithms_1979,
+author={S. Even}, 
+title={Graph Algorithms},
+address={Rockville, MD},
+publisher={Computer Sci. Press},
+year=1979
 }
 
 @article{Brunel_lattice_decoding_2003,
@@ -1447,7 +1512,7 @@ volume = {39},
 }
 
 @ARTICLE{Erex2004_lattice_decoding,
-title={Achieving $1/2 \log(1+{SNR})$ on the {AWGN} channel with lattice encoding and decoding},
+title={Achieving {$1/2 \log(1+{\text{SNR}})$} on the {AWGN} channel with lattice encoding and decoding},
 author={U. Erez and R. Zamir},
 journal=ieeetit,
 year=2004,
@@ -1477,6 +1542,16 @@ month = {Jan.}
   publisher =wiley,
   year = 1969,
   address ={New York}
+}
+
+@ARTICLE{Karger_mincut_ranomised_1996,
+author={D. R. Karger and C. Stein}, 
+title={A New Approach to the Minimum Cut Problem},
+journal={Journal of the ACM},
+volume=43,
+number=4,
+pages={601-640},
+year=1996
 }
 
 @ARTICLE{Ali_doppler_satellites_1998, 
@@ -1583,6 +1658,24 @@ file = {elkies_lattices_linear_codes.pdf}
   timestamp = {2008.02.17}
 }
 
+@article{Mathews_normal_sample_range_1993,
+     jstor_articletype = {research-article},
+     title = {Asymptotic Distribution of the Normal Sample Range},
+     author = {P. C. Matthews and A. L. Rukhin},
+     journal = {The Annals of Applied Probability},
+     volume = 3,
+     number = 2,
+     jstor_formatteddate = {May, 1993},
+     pages = {pp. 454-466},
+     url = {http://www.jstor.org/stable/2959641},
+     ISSN = 10505164,
+     abstract = {For a spherically symmetric multivariate normal random sample, the asymptotic distribution of the largest interpoint Euclidean distance is derived. The number of interpoint distances exceeding a high level is shown to have a limiting Poisson distribution.},
+     language = {English},
+     year = 1993,
+     publisher = {Institute of Mathematical Statistics},
+     copyright = {Copyright © 1993 Institute of Mathematical Statistics},
+    }
+
 @BOOK{Fisher1993,
   title = {{Statistical analysis of circular data}},
   publisher = {Cambridge University Press},
@@ -1611,6 +1704,21 @@ file = {elkies_lattices_linear_codes.pdf}
      abstract = {In an earlier paper, Fisher defined the notion of a median direction for data from a unimodal distribution of three-dimensional unit vectors and studied its statistical properties. Corresponding notions of a median axis for bipolar axial or great circle data were also suggested but not analysed. This paper gives a statistical treatment of spherical median axes, including their asymptotic relative efficiencies, and a comparison with the customary principal or polar axis estimators using asymptotic relative efficiencies. The sample spherical median axes enjoy the same sort of resistance to outlying values as do the median vector, spatial median and linear median.},
      year = 1993,
     }
+
+@ARTICLE{Mehlan1993_carrier_and_time_offset_MSK, 
+author={R. Mehlan and Yong-En Chen and H. Meyr}, 
+journal=ieeetvt, 
+title={A fully digital feedforward MSK demodulator with joint frequency offset and symbol timing estimation for burst mode mobile radio}, 
+year=1993, 
+month={Nov.}, 
+volume=42, 
+number=4, 
+pages={434-443}, 
+abstract={A strictly feedforward demodulator structure for minimum shift keying (MSK) modulation with joint nondata-aided symbol clock and frequency offset estimation is presented. Due to its feedforward operation, clock synchronization and frequency offset compensation are hang-up free, and the demodulator is well suited for a digital implementation. The sampled baseband signal is passed through a nonlinearity and smoothed by a digital filter. The magnitude of the filter output directly drives the clock recovery process. The phase of the smoothed signal is an estimate of the carrier frequency offset and is used for offset compensation. Following synchronization, the signal is demodulated by differentially coherent detection. The performance of the demodulator is assessed for the AWGN and the Rayleigh flat and frequency-selective fading channel by computer simulations}, 
+keywords={AWGN channel;MSK;Rayleigh fading channel;burst mode mobile radio;clock recovery process;clock synchronization;differentially coherent demodulation;digital filter;feedforward demodulator;flat fading channel;frequency offset;frequency-selective fading channel;minimum shift keying;offset compensation;sampled baseband signal;smoothed signal;symbol timing estimation;demodulators;digital filters;fading;minimum shift keying;mobile radio systems;synchronisation;telecommunication channels;}, 
+doi={10.1109/25.260769}, 
+ISSN={0018-9545},}
+
 
 @article{Fisher_common_mean_direction_dir_est_no_dist_assumptions1983,
      title = {Estimating the Common Mean Direction of Several Circular or Spherical Distributions with Differing Dispersions},
@@ -2758,6 +2866,19 @@ year=2011,
 month={Mar.}
 }
 
+@article{McKilliam_error_prob_An2012,
+  author    = {R. G. McKilliam and
+               R. Subramanian and
+               E. Viterbo and
+               I. V. L. Clarkson},
+  title     = {On the error performance of the ${A}_{n}$ lattices},
+  journal   = {CoRR},
+  volume    = {abs/1111.6334},
+  year      = 2011,
+  ee        = {http://arxiv.org/abs/1111.6334},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
 @inproceedings{Quinn_snpe_dasp_2011,
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
 title={Estimating period from sparse, noisy timing data},
@@ -3225,6 +3346,15 @@ MRREVIEWER = {J. Rosenblatt},
   timestamp = {2008.02.18}
 }
 
+@article{Picard_min_cuts_1974,
+author={J. C. Picard and H. D. Ratliff},
+title= {Minimum cuts and related problems},
+journal = {Networks}, 
+volume= {5}, 
+pages={357-370}, 
+year={1974}
+}
+
 @ARTICLE{Peleg1991_CRB_PPS_1991,
   author = {S. Peleg and B. Porat},
   title = {The {Cramer-Rao} lower bound for signals with constant amplitude
@@ -3282,7 +3412,7 @@ doi={10.1109/78.403349},
 ISSN={1053-587X}, 
 }
 
-@article{Pearson_tables_of_beta_functions,
+@BOOK{Pearson_tables_of_beta_functions,
 author={K. Pearson},
 title={Tables of Incomplete Beta Functions},
 edition={2nd},
@@ -3914,7 +4044,7 @@ pages = {303-317}
 @article{Suga_1975_bats_echolocation,
 author = {N. Suga and J. A. Simmons and P. H. Jen},
 year = 1975,
-title = {Peripheral specialization for fine analysis of Doppler-shifted echoes in the auditory system of the {CF-FM} bat {Pteronotus parnellii}},
+title = {Peripheral specialization for fine analysis of Doppler-shifted echoes in the auditory system of the {CF-FM} bat {Pteronotus Parnellii}},
 journal = {Journal of Experimental Biology},
 volume = 63, 
 pages = {161-192}
@@ -3974,6 +4104,49 @@ author={G. J. G. Upton},
   timestamp = {2007.10.24}
 }
 
+@ARTICLE{Sankaran_solving_CDMA_mincut_1998, 
+author={Sankaran, C. and Ephremides, A.}, 
+journal=ieeetit, 
+title={Solving a class of optimum multiuser detection problems with polynomial complexity}, 
+year=1998, 
+month={Sep.}, 
+volume=44, 
+number=5, 
+pages={1958 -1961}, 
+keywords={bound;correlation properties;cross correlation;demodulation;direct sequence code-division multiple access;graph theory;identification;optimum multiuser detection;polynomial complexity;pseudorandom codes;quadratic 0-1 programming problem;signal set;symbol period;synchronous DS-CDMA system;code division multiple access;codes;computational complexity;correlation methods;demodulation;graph theory;identification;polynomials;quadratic programming;signal detection;spread spectrum communication;}, 
+doi={10.1109/18.705573}, 
+ISSN={0018-9448},}
+
+@article{Shuzhong_2000_sdr_exact_sometimes,
+   author = {S. Zhang},
+   affiliation = {Department of Systems Engineering & Engineering Management, The Chinese University of Hong Kong, Shatin, N.T., Hong Kong, e-mail: zhang@se.cuhk.cuhk.edu.hk HK},
+   title = {Quadratic maximization and semidefinite relaxation},
+   journal = {Mathematical Programming},
+   publisher = {Springer Berlin / Heidelberg},
+   issn = {0025-5610},
+   keyword = {Mathematics and Statistics},
+   pages = {453-465},
+   volume = 87,
+   issue = 3,
+   url = {http://dx.doi.org/10.1007/s101070050006},
+   note = {10.1007/s101070050006},
+   abstract = {In this paper we study a class of quadratic maximization problems and their semidefinite programming (SDP) relaxation. For a special subclass of the problems we show that the SDP relaxation provides an exact optimal solution. Another subclass, which is ??-hard, guarantees that the SDP relaxation yields an approximate solution with a worst-case performance ratio of 0.87856.... This is a generalization of the well-known result of Goemans and Williamson for the maximum-cut problem. Finally, we discuss extensions of these results in the presence of a certain type of sign restrictions.},
+   year = 2000
+}
+
+@ARTICLE{Schlegel_polycomplexintyCDMA_2000, 
+author={C. Schlegel and A. Grant}, 
+journal=ieeetit, 
+title={Polynomial complexity optimal detection of certain multiple-access systems}, 
+year={2000}, 
+month={Sep.}, 
+volume={46}, 
+number={6}, 
+pages={2246-2248}, 
+keywords={CDMA;code-division multiple access;crosscorrelations;exponential complexity;linear multiple-access system;optimal detection algorithm;optimal multiple-user detection;polynomial complexity optimal detection;computational complexity;correlation methods;multi-access systems;multiuser channels;optimisation;polynomials;signal detection;}, 
+doi={10.1109/18.868499}, 
+ISSN={0018-9448},}
+
 @ARTICLE{Turkman1984,
   author = {K. F. Turkman and A. M. Walker},
   title = {On the Asymptotic Distributions of Maxima of Trigonometric Polynomials
@@ -4012,6 +4185,19 @@ ISSN={0143-7062}, }
 	pages = {973-976}
 }
 
+
+@article{Stoer_simple_min_cut_1997,
+	title = {A Simple Min-Cut Algorithm},
+	volume = 44,
+	journal = {Journal of the ACM},
+number = 4,
+	author = {M. Stoer and F. Wagner},
+	year = 1997,
+	pages = {585-591}
+}
+
+
+
 @unpublished{Truong_VLSI_RS_1992,
 author={I. Hsu and T. Truong},
 title={{VLSI} architecture for a {Reed-Solomon} decoder},
@@ -4019,6 +4205,19 @@ note={{United States} patent, No. 5130990},
 year=1992,
 month={July}
 }
+
+@ARTICLE{Ulukus_cdma_mincut_1998, 
+author={S. Ulukus and R.D. Yates}, 
+journal=ieeecl, 
+title={Optimum multiuser detection is tractable for synchronous {CDMA} systems using m-sequences}, 
+year=1998, 
+month={Apr.}, 
+volume=2, 
+number=4, 
+pages={89 -91}, 
+keywords={NP-hard problem;code-division multiple access;computational complexity;cross correlations;maximal length sequences;minimum capacity cut problem;optimum detection problem;optimum multiuser detection;polynomial computational complexity;polynomial time;signature sequences;synchronous CDMA systems;code division multiple access;computational complexity;correlation theory;optimisation;polynomials;sequences;signal detection;synchronisation;}, 
+doi={10.1109/4234.664214}, 
+ISSN={1089-7798},}
 
 @article{Vardy1993_leech_lattice_MLD,
   author    = {A. Vardy and Y. Be'ery},
@@ -4157,6 +4356,15 @@ abstract={ Trellis-coded modulation schemes using four-, eight-, or16-dimensiona
 keywords={null Digital modulation/demodulation, Trellis coding},
 ISSN={0018-9448}, }
 
+@ARTICLE{Massey1972optimumframe,
+    author = {J. L. Massey},
+    title = {Optimum frame synchronization},
+    journal = ieeetc,
+    year = 1972,
+    volume = 20,
+number=2,
+    pages = {115-119}
+}
 
 @BOOK{Wiley1982,
   title = {Electronic Intelligence: The Analysis of Radar Signals},
