--- a/robby.bib
+++ b/robby.bib
@@ -13,9 +13,25 @@
 @unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
   title = {Direction estimation by minimum squared arc length},
-  note = {submitted to IEEE Trans. Sig. Proc.},
+  note = {accepted to IEEE Trans. Sig. Proc.},
   year = 2011,
   month = {Mar.}
+}
+
+@unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
+  author = {R. G. McKilliam and A. Grant},
+  title = {Finding short vectors in a lattice of Voronoi's first kind},
+  note = {submitted to the International Symposium on Information Theory (ISIT)},
+  year = 2012,
+  month = {Jan.}
+}
+
+@unpublished{Kodithuwakku_projection_PIC_ICC_2012,
+  author = {J. Kodithuwakku and N. A. Letzepiz and A. Grant and R. G. McKilliam},
+  title = {Code-Acquisition via the Projection Method for CDMA Systems in High MAI Channels},
+  note = {accepted to the International Conference on Communications (ICC)},
+  year = 2012,
+  month = {Jan.}
 }
 
 @article{McKilliam_error_prob_An2012,
