--- a/bib.bib
+++ b/bib.bib
@@ -1088,6 +1088,14 @@ volume = {5},
 pages = {26-34}
 }
 
+@BOOK{Coxeter_regular_polytopes,
+  title = {Regular polytopes},
+  publisher = {Dover},
+  year = 1973,
+  author = {H. S. M. Coxeter},
+  address = {New York}
+}
+
 @BOOK{SPLAG,
   title = {Sphere packings, lattices and groups},
   publisher = {Springer},
@@ -2861,9 +2869,25 @@ pages={525-547}
 @unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
 title={Direction estimation by minimum squared arc length},
-note={submitted to IEEE Trans. Sig. Proc.},
+note={accepted to IEEE Trans. Sig. Proc.},
 year=2011,
 month={Mar.}
+}
+
+@unpublished{McKilliam_short_vectors_first_type_isit_2012,
+author={R. G. McKilliam and A. Grant},
+title={Finding short vectors in a lattice of {Voronoi's} first kind},
+note={submitted to the International Symposium on Information Theory (ISIT)},
+year=2012,
+month={Jan.}
+}
+
+@unpublished{Kodithuwakku_projection_PIC_ICC_2012,
+author={J. Kodithuwakku and N. A. Letzepiz and A. Grant and R. G. McKilliam},
+title={Code-Acquisition via the Projection Method for {CDMA} Systems in High {MAI} Channels},
+note={accepted to the International Conference on Communications (ICC)},
+year=2012,
+month={Jan.}
 }
 
 @article{McKilliam_error_prob_An2012,
@@ -3080,7 +3104,7 @@ pages={1426-1430}
 }
 
 @article{Moss_2005echolocation,
-  title={Echolocation in bat and dolphins},
+  title={Echolocation in bats and dolphins},
   author={J. A. Thomas and C. F. Moss and M. Vater and P. W. Moore},
   journal={The Journal of the Acoustical Society of America},
   volume=118,
