--- a/bib.bib
+++ b/bib.bib
@@ -2876,7 +2876,7 @@ month={Mar.}
 
 @unpublished{McKilliam_short_vectors_first_type_isit_2012,
 author={R. G. McKilliam and A. Grant},
-title={Finding short vectors in a lattice of Voronoi's first kind},
+title={Finding short vectors in a lattice of {Voronoi's} first kind},
 note={submitted to the International Symposium on Information Theory (ISIT)},
 year=2012,
 month={Jan.}
@@ -2884,7 +2884,7 @@ month={Jan.}
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
 author={J. Kodithuwakku and N. A. Letzepiz and A. Grant and R. G. McKilliam},
-title={Code-Acquisition via the Projection Method for CDMA Systems in High MAI Channels},
+title={Code-Acquisition via the Projection Method for {CDMA} Systems in High {MAI} Channels},
 note={accepted to the International Conference on Communications (ICC)},
 year=2012,
 month={Jan.}
