--- a/robby.bib
+++ b/robby.bib
@@ -18,9 +18,9 @@
   month = {Mar.}
 }
 
-@unpublished{McKilliam_mean_dir_est_sq_arc_length2010,
+@unpublished{McKilliam_short_vectors_first_type_isit_2012,
   author = {R. G. McKilliam and A. Grant},
-  title = {Finding short vectors in a lattice of Voronoi's first kind},
+  title = {Finding short vectors in a lattice of {Voronoi's} first kind},
   note = {submitted to the International Symposium on Information Theory (ISIT)},
   year = 2012,
   month = {Jan.}
@@ -28,7 +28,7 @@
 
 @unpublished{Kodithuwakku_projection_PIC_ICC_2012,
   author = {J. Kodithuwakku and N. A. Letzepiz and A. Grant and R. G. McKilliam},
-  title = {Code-Acquisition via the Projection Method for CDMA Systems in High MAI Channels},
+  title = {Code-Acquisition via the Projection Method for {CDMA} Systems in High {MAI} Channels},
   note = {accepted to the International Conference on Communications (ICC)},
   year = 2012,
   month = {Jan.}
